--- a/main.css
+++ b/main.css
@@ -1,6 +1,12 @@
 body {
 	background-color: #202020;
+	background-image: url("img/spiff.svg");
 	color: white;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-blend-mode: overlay;
+	max-width: 800px;
+	margin: auto;
 }
 .logo {
 	width: 150px;
