Making site more responsive

--- a/main.css
+++ b/main.css
@@ -3,44 +3,41 @@ body {
 	background-image: url("img/spiff.svg");
 	color: white;
 	background-repeat: no-repeat;
+	background-attachment: fixed;
 	background-position: center;
 	background-blend-mode: overlay;
+	background-size: cover;
 	max-width: 800px;
 	margin: auto;
+	padding: 5px;
 }
 .logo {
 	width: 150px;
 	max-width: 150px;
 	max-height: 150px;
-	margin: 25px 50px;
+	margin: 25px 50px 10px;
 }
 .flip {
 	filter: invert(1);
 }
-.container {
-	display: inline-block;
-	max-width: 800px;
-	text-align: center;
-}
 h1 {
-	font: bold 50px Courier New, monospace;
+	font: bold 3em Courier New, monospace;
+	text-align: center;
 	margin-top: 10px;
 	margin-bottom: 20px;
 }
 h2 {
-	font: 25px Verdana, sans-serif;
+	font: bold 2em Verdana, sans-serif;
 	margin-top: 5px;
 	margin-bottom: 10px;
 }
-h3 {
-	font: 20px Verdana, sans-serif;
+h3, figcaption, p {
+	font: 1em Verdana, sans-serif;
 	margin-top: 5px;
 	margin-bottom: 10px;
-}
-p {
-	font: 14px Verdana, sans-serif;
 }
 a {
+	display: inline-block;
 	text-decoration: none;
 	color: white;
 }
