--- a/main.css
+++ b/main.css
@@ -21,20 +21,19 @@ body {
 	filter: invert(1);
 }
 h1 {
-	font: bold 3em Courier New, monospace;
-	text-align: center;
+	font: bold 2em Courier New, monospace;
 	margin-top: 10px;
 	margin-bottom: 20px;
 }
 h2 {
-	font: bold 2em Verdana, sans-serif;
+	font: 1.5em Courier New, monospace;
 	margin-top: 5px;
-	margin-bottom: 10px;
+	margin-bottom: 5px;
 }
 h3, figcaption, p {
-	font: 1em Verdana, sans-serif;
+	font: .75em Verdana, sans-serif;
 	margin-top: 5px;
-	margin-bottom: 10px;
+	margin-bottom: 20px;
 }
 a {
 	display: inline-block;
