--- a/main.css
+++ b/main.css
@@ -7,8 +7,6 @@ body {
 	background-position: center;
 	background-blend-mode: overlay;
 	background-size: cover;
-	max-width: 800px;
-	margin: auto;
 	padding: 5px;
 }
 .logo {
@@ -43,8 +41,14 @@ a {
 a:hover {
 	text-decoration: underline;
 }
-.center-image {
+#images {
+	max-width: 800px;
+	width: fit-content;
+	margin: 0 auto;
 	text-align: center;
-    margin-top: 50vh;
-    transform: translateY(-50%);
+}
+#text {
+	max-width: 600px;
+	width: fit-content;
+	margin: 0 auto;
 }
